--- a/static/index.html
+++ b/static/index.html
@@ -1,16 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  
-  <title>Ethon Willes Portfolio</title>
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../src/style/main.scss" />
+    <title>Ethon Willes Portfolio</title>
+  </head>
 
-<body>
-  <div class="app-wrapper"></div>
-</body>
-
+  <body>
+    <div class="app-wrapper"></div>
+  </body>
 </html>
